# slack-export

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  RUNBOOK.md  config.example.yaml  pyproject.toml  slack_export.py
docs/: API_MCP_CONTRACT.md  ARCHITECTURE.md  CLI.md  CONFIG.md  ROADMAP.md  SLACK_MANIFEST.md  SLACK_MIRROR_SOCKET_MODE_APP.md  slack-mirror.1
exports/: jim_turner_scope_exports_manifest.json  nacu_scope_exports_manifest.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
manifests/: slack-app-soylei-nooauth.json  slack-app-soylei-nooauth.yaml  slack-app.json  slack-app.yaml  slack-mirror-socket-mode-nooauth.json  slack-mirror-socket-mode-nooauth.yaml  slack-mirror-socket-mode-pcg.rendered.json  slack-mirror-socket-mode-polymer.rendered.json  slack-mirror-socket-mode-polymer.rendered.yaml  slack-mirror-socket-mode.json  slack-mirror-socket-mode.rendered.json  slack-mirror-socket-mode.yaml
memory/: 2026-03-10.md
scripts/: __init__.py  audit_mirror_completeness.py  audit_planning_contract.py  catchup_mirror.sh  catchup_until_complete.py  check_generated_docs.py  eval_search.py  export_channel_day.py  export_channel_day_docx.py  export_channel_day_pdf.py  export_multi_day_docx.py  export_multi_day_pdf.py  export_semantic_daypack.py  install_agent_skills.sh  install_live_mode_systemd_user.sh  live_mode_status.sh  live_mode_status_all.sh  live_mode_tmux.sh  render_export_docx_fixtures.py  render_runtime_report.py  render_slack_manifest.py  smoke_receipts_compatibility.py  user_env.sh  (+3 more)
tests/: test_cli.py  (+25 more)
(+532 files in other folders)
