[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-mirror"
version = "0.2.0"
description = "Slack mirror and export toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mammoth>=1.12.0",
  "PyYAML>=6.0",
  "slack_sdk>=3.0",
  "pick>=2.4.0",
  "requests>=2.31",
  "websocket-client>=1.9.0",
]

[project.optional-dependencies]
local-semantic = [
  "sentence-transformers>=3.0",
]

[project.scripts]
slack-mirror = "slack_mirror.cli.main:main"

[tool.setuptools]
packages = ["slack_mirror", "slack_mirror.cli", "slack_mirror.core", "slack_mirror.integrations", "slack_mirror.search", "slack_mirror.service", "slack_mirror.sync", "scripts"]
